# langchain-tutorial

./: .env-EXAMPLE  README.md  config.yaml  pyproject.toml
data/: result.csv  template.txt  参加者アンケート.xlsx
src/: ExcelAIConnector.py
